--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
     font-family:"AmazonEmber-Regular",Arial,sans-serif
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 body{
   padding: 0;
   margin: 0;
